--- a/Content/services.html
+++ b/Content/services.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Services - CodeProbe Testing Services</title>
-    <link rel="stylesheet" href="../Styles/styles.css">
+    <link rel="stylesheet" href="../Styles/general.css">
+    <link rel="stylesheet" href="../Styles/services.css">
+    
 
 </head>
 <body>
