--- a/Content/contact.html
+++ b/Content/contact.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact CodeProbe - Software Testing Services</title>
-    <link rel="stylesheet" href="../Styles/styles.css">
+    <link rel="stylesheet" href="../Styles/general.css">
+    <link rel="stylesheet" href="../Styles/contact.css">
+    
 
 </head>
 <body>
