--- a/Content/contact.html
+++ b/Content/contact.html
@@ -1,40 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Contact CodeProbe - Software Testing Services</title>
     <link rel="stylesheet" href="../Styles/general.css">
     <link rel="stylesheet" href="../Styles/contact.css">
-    
-
 </head>
+
 <body>
 
-<header>
-    <h1>CodeProbe Testing Services</h1>
-    <nav id="main-nav">
-        <ul>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <h1>CodeProbe Testing Services</h1>
+        <nav id="main-nav">
+            <ul>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>If you have any questions or would like to engage our services, please reach out to us:</p>
-        <address>
-            Email: <a href="mailto:info@codeprobe.com">info@codeprobe.com</a><br>
-            Phone: +1 (555) 123-4567
-        </address>
-    </section>
-</main>
+    <main>
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>If you have any questions or would like to engage our services, please reach out to us:</p>
+            <address>
+                Email: <a href="mailto:info@codeprobe.com">info@codeprobe.com</a>
+                <br>
+                Phone: +1 (555) 123-4567
+            </address>
+        </section>
 
-<footer>
-    <p>&copy; 2023 CodeProbe Testing Services</p>
-</footer>
+        <section id="prices">
+            <h2>Service Details and Pricing</h2>
+            <div class="price-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Service Type</th>
+                            <th>Description</th>
+                            <th>Duration</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Automated Testing</td>
+                            <td>Implementation of automated test scripts.</td>
+                            <td>2 Weeks</td>
+                            <td>$5000</td>
+                        </tr>
+                        <tr>
+                            <td>Manual Testing</td>
+                            <td>Comprehensive manual testing coverage.</td>
+                            <td>Varies</td>
+                            <td>$75/hour</td>
+                        </tr>
+                        <tr>
+                            <td>Performance Testing</td>
+                            <td>Load and stress testing for your application.</td>
+                            <td>1 Week</td>
+                            <td>$3500</td>
+                        </tr>
+                        <tr>
+                            <td>Security Testing</td>
+                            <td>Identification of potential security vulnerabilities.</td>
+                            <td>3 Weeks</td>
+                            <td>$7000</td>
+                        </tr>
+                        <tr>
+                            <td>Usability Testing</td>
+                            <td>User-centric testing for UI/UX improvements.</td>
+                            <td>Varies</td>
+                            <td>$100/hour</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 CodeProbe Testing Services</p>
+    </footer>
 
 </body>
+
 </html>
