--- a/Content/services.html
+++ b/Content/services.html
@@ -1,44 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Services - CodeProbe Testing Services</title>
     <link rel="stylesheet" href="../Styles/general.css">
     <link rel="stylesheet" href="../Styles/services.css">
-    
-
 </head>
+
 <body>
 
-<header>
-    <h1>CodeProbe Testing Services</h1>
-    <nav id="main-nav">
-        <ul>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <h1>CodeProbe Testing Services</h1>
+        <nav id="main-nav">
+            <ul>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
-    <section id="services">
-        <h2>Our Testing Services</h2>
-        <article class="service">
-            <h3>Automated Testing</h3>
-            <p>Speed up your release cycle with our state-of-the-art automated testing frameworks.</p>
-        </article>
-        <article class="service">
-            <h3>Manual Testing</h3>
-            <p>Our expert QA team provides detailed and thorough manual testing for all your applications.</p>
-        </article>
-        <!-- Additional services can be listed here -->
-    </section>
-</main>
+    <main>
+        <section id="services">
+            <h2>Our Testing Services</h2>
+            <article class="service">
+                <h3>Automated Testing</h3>
+                <p>Speed up your release cycle with our state-of-the-art automated testing frameworks.</p>
+            </article>
+            <article class="service">
+                <h3>Manual Testing</h3>
+                <p>Our expert QA team provides detailed and thorough manual testing for all your applications.</p>
+            </article>
+            <article class="service">
+                <h3>Performance Testing</h3>
+                <p>Ensure your application performs under stress with our comprehensive performance testing service.</p>
+            </article>
+            <article class="service">
+                <h3>Security Testing</h3>
+                <p>Protect your software against threats with our security testing methodologies.</p>
+            </article>
+            <article class="service">
+                <h3>Usability Testing</h3>
+                <p>Improve user experience with our in-depth usability testing process.</p>
+            </article>
 
-<footer>
-    <p>&copy; 2023 CodeProbe Testing Services</p>
-</footer>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 CodeProbe Testing Services</p>
+    </footer>
 
 </body>
+
 </html>
