--- a/Content/contact-prices.html
+++ b/Content/contact-prices.html
@@ -3,20 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Contact CodeProbe - Software Testing Services</title>
+    <title>Contact/Prices</title>
+    <link rel="icon" type="image/webp" href="../Images/descartes_icon.webp">
     <link rel="stylesheet" href="../Styles/general.css">
-    <link rel="stylesheet" href="../Styles/contact.css">
+    <link rel="stylesheet" href="../Styles/contact-prices.css">
 </head>
 
 <body>
 
     <header>
-        <h1>CodeProbe Testing Services</h1>
+        <h1>Code Probe Testing Services</h1>
         <nav id="main-nav">
             <ul>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact-prices.html">Price/Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -31,6 +32,7 @@
                 Phone: +1 (555) 123-4567
             </address>
         </section>
+        
 
         <section id="prices">
             <h2>Service Details and Pricing</h2>
