--- a/Content/services.html
+++ b/Content/services.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Services - CodeProbe Testing Services</title>
+    <title>Services</title>
+    <link rel="icon" type="image/webp" href="../Images/descartes_icon.webp">
     <link rel="stylesheet" href="../Styles/general.css">
     <link rel="stylesheet" href="../Styles/services.css">
 </head>
@@ -11,12 +12,12 @@
 <body>
 
     <header>
-        <h1>CodeProbe Testing Services</h1>
+        <h1>Code Probe Testing Services</h1>
         <nav id="main-nav">
             <ul>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact-prices.html">Price/Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -25,23 +26,23 @@
         <section id="services">
             <h2>Our Testing Services</h2>
             <article class="service">
-                <h3>Automated Testing</h3>
+                <h4>Automated Testing</h4>
                 <p>Speed up your release cycle with our state-of-the-art automated testing frameworks.</p>
             </article>
             <article class="service">
-                <h3>Manual Testing</h3>
+                <h4>Manual Testing</h4>
                 <p>Our expert QA team provides detailed and thorough manual testing for all your applications.</p>
             </article>
             <article class="service">
-                <h3>Performance Testing</h3>
+                <h4>Performance Testing</h4>
                 <p>Ensure your application performs under stress with our comprehensive performance testing service.</p>
             </article>
             <article class="service">
-                <h3>Security Testing</h3>
+                <h4>Security Testing</h4>
                 <p>Protect your software against threats with our security testing methodologies.</p>
             </article>
             <article class="service">
-                <h3>Usability Testing</h3>
+                <h4>Usability Testing</h4>
                 <p>Improve user experience with our in-depth usability testing process.</p>
             </article>
 
