--- a/Content/about.html
+++ b/Content/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About CodeProbe - Software Testing Services</title>
+    <title>About Us</title>
+    <link rel="icon" type="image/webp" href="../Images/descartes_icon.webp">
     <link rel="stylesheet" href="../Styles/general.css">
     <link rel="stylesheet" href="../Styles/about.css">
     
@@ -11,12 +12,12 @@
 <body>
 
 <header>
-    <h1>CodeProbe Testing Services</h1>
+    <h1>Code Probe Testing Services</h1>
     <nav id="main-nav">
         <ul>
             <li><a href="about.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact-prices.html">Price/Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -28,7 +29,7 @@
     </section>
 
     <section id="team">
-        <h2>Meet Our Team</h2>
+        <h3>Meet Our Team</h3>
         <div id="team-description">
             <div class="team-member">
                 <img src="../Images/ceo.png" alt="CEO Jane Doe">
