--- a/Content/about.html
+++ b/Content/about.html
@@ -28,7 +28,7 @@
         <p>At CodeProbe, we are dedicated to ensuring the highest quality of software through our rigorous testing protocols. Our team of experienced testers is committed to finding and addressing even the most elusive bugs.</p>
     </section>
 
-    <section id="team">
+    <section>
         <h3>Meet Our Team</h3>
         <div id="team-description">
             <div class="team-member">
