Start of workshop | template

--- a/Content/about.html
+++ b/Content/about.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <title>About Us</title>
     <link rel="icon" type="image/webp" href="../Images/descartes_icon.webp">
-    <link rel="stylesheet" href="../Styles/general.css">
-    <link rel="stylesheet" href="../Styles/about.css">
-    
-
 </head>
 <body>
 
@@ -23,30 +19,24 @@
 </header>
 
 <main>
-    <section id="about">
+    <section>
         <h2>About CodeProbe</h2>
         <p>At CodeProbe, we are dedicated to ensuring the highest quality of software through our rigorous testing protocols. Our team of experienced testers is committed to finding and addressing even the most elusive bugs.</p>
     </section>
 
     <section>
         <h3>Meet Our Team</h3>
-        <div id="team-description">
-            <div class="team-member">
-                <img src="../Images/ceo.png" alt="CEO Jane Doe">
-                <h3>Jane Doe</h3>
-                <p>As the CEO of CodeProbe, Jane has over 20 years of experience in software development and testing, driving innovation and excellence across our services.</p>
-            </div>
-            <div class="team-member">
-                <img src="../Images/cto.png" alt="CTO John Smith">
-                <h3>John Smith</h3>
-                <p>John, our CTO, is an expert in automated testing systems and leads our efforts in developing cutting-edge testing methodologies.</p>
-            </div>
-            <div class="team-member">
-                <img src="../Images/lead_tester.png" alt="Lead Tester Alex Johnson">
-                <h3>Alex Johnson</h3>
-                <p>Alex is the lead tester at CodeProbe, with a keen eye for detail and a passion for quality assurance that is unmatched in the industry.</p>
-            </div>
-        </div>
+            <img src="../Images/ceo.png" alt="CEO Jane Doe">
+            <h3>Jane Doe</h3>
+            <p>As the CEO of CodeProbe, Jane has over 20 years of experience in software development and testing, driving innovation and excellence across our services.</p>
+
+            <img src="../Images/cto.png" alt="CTO John Smith">
+            <h3>John Smith</h3>
+            <p>John, our CTO, is an expert in automated testing systems and leads our efforts in developing cutting-edge testing methodologies.</p>
+
+            <img src="../Images/lead_tester.png" alt="Lead Tester Alex Johnson">
+            <h3>Alex Johnson</h3>
+            <p>Alex is the lead tester at CodeProbe, with a keen eye for detail and a passion for quality assurance that is unmatched in the industry.</p>
     </section>
 </main>
 
