--- a/Content/about.html
+++ b/Content/about.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+<!-- 1. Implementing CSS -->
+
 <header>
     <h1>Code Probe Testing Services</h1>
     <nav id="main-nav">
@@ -18,13 +20,32 @@
     </nav>
 </header>
 
+<!-- 2. Styling Elements -->
+
+<!-- 2.2 Edit <h2> -->
+
+<!-- 2.2 Edit Paragraph -->
+
+<!-- 3. About Us CSS File (about.css) -->
+
 <main>
+	<!-- 4. Style for ID Selector "about" -->
+	
+	<!-- 5. Box Model for ID Selector "about" -->
+	
     <section>
         <h2>About CodeProbe</h2>
         <p>At CodeProbe, we are dedicated to ensuring the highest quality of software through our rigorous testing protocols. Our team of experienced testers is committed to finding and addressing even the most elusive bugs.</p>
     </section>
 
+	<!-- 6. Edit <h3> in GENERAL CSS -->
+
     <section>
+	
+	<!-- 7. Team Member Divisions -->
+	
+	<!-- 7.1 Individual Divisions -->
+	
         <h3>Meet Our Team</h3>
             <img src="../Images/ceo.png" alt="CEO Jane Doe">
             <h3>Jane Doe</h3>
@@ -37,8 +58,17 @@
             <img src="../Images/lead_tester.png" alt="Lead Tester Alex Johnson">
             <h3>Alex Johnson</h3>
             <p>Alex is the lead tester at CodeProbe, with a keen eye for detail and a passion for quality assurance that is unmatched in the industry.</p>
+			
+			<!-- 7.2 Team Member Container
+ -->
+			
     </section>
+	
+	<!-- 8. Style for Team Member Images -->
+
 </main>
+
+<!-- 9. Footer Styling -->
 
 <footer>
     <p>&copy; 2023 CodeProbe Testing Services</p>
@@ -46,3 +76,5 @@
 
 </body>
 </html>
+
+<!-- 10. Navigation Bar (Optional, Time-Based) -->
